--- a/Nanito1.3.2/Assembly-CSharp.csproj
+++ b/Nanito1.3.2/Assembly-CSharp.csproj
@@ -60,6 +60,9 @@
      <Compile Include="Assets\SampleScenes\Scripts\ParticleSceneControls.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\PlaceTargetWithMouse.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\SlowMoButton.cs" />
+     <Compile Include="Assets\Scenes\BounceBehavior.cs" />
+     <Compile Include="Assets\Scenes\NanitoController2Script.cs" />
+     <Compile Include="Assets\Scenes\WallBounce.cs" />
      <Compile Include="Assets\Scripts\BackgroundScroller.cs" />
      <Compile Include="Assets\Scripts\BlinkingPlatforms.cs" />
      <Compile Include="Assets\Scripts\BlueCell.cs" />
